Fix CSS alignment in team section

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -13,6 +13,7 @@ a {
 .window {
   font-family: HelveticaNeue, 'Helvetica Neue', 'Lucida Grande', Arial, sans-serif;
   background: #3b3b3b;
+  max-width: 60%;
   width: 90%;
   height: auto;
   margin: auto;
